<resources>

    <!--splash-->

    <string name="app_name">Feedme</string>
    <string name="app_version">0.1.5</string>

    <!--connexion-->

    <string name="register">Sign up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirmation_hint">Confirmation</string>
    <string name="sent">Send</string>
    <string name="skip">Skip ></string>
    <string name="already_user">I aleready have an account</string>

    <!--main-->
    <string name="feed_title">Title</string>
    <string name="feed_description">Description</string>

</resources>
